<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Home Library</string>
    <string name="auth_error">Authentication error</string>
    <string name="error_enter_email_password">Please enter email and password</string>
    <string name="error_fill_all_fields">Please fill all fields</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="button_sign_in_with_google">Sign in with Google</string>

    <string name="library">Library</string>
    <string name="profile">Profile</string>

    <string name="error_google_sign_in">Google sign-in failed</string>
    <string name="default_web_client_id">8259215165-cln5phfc0evetbol0evgsel5toauieab.apps.googleusercontent.com</string>

    <string name="book_cover_desc">Book cover</string>
    <string name="title_placeholder">Title loading…</string>
    <string name="authors_placeholder">Authors loading…</string>
    <string name="genre_placeholder">Genre loading…</string>
    <string name="description_placeholder">Description loading…</string>
    <string name="read_button_text">Read</string>
    <string name="unknown_authors">Unknown authors</string>
    <string name="unknown_author">Unknown author</string>
    <string name="download_failed">Download failed</string>
    <string name="no_pdf_reader">No PDF reader found</string>
    <string name="error_loading_books">Failed to load books</string>

    <string name="search_hint">Search…</string>

    <string name="edit_nickname">Change nickname</string>
    <string name="edit_email">Change email</string>
    <string name="edit_avatar">Change avatar</string>
    <string name="choose_avatar">Select avatar image</string>
    <string name="change_language">Change language</string>
    <string name="logout">Log out</string>

    <string name="back_button_desc">Back</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_confirm_password">Подтвердите пароль</string>
    <string name="button_register">Зарегистрироваться</string>
    <string name="text_go_to_login">Уже есть аккаунт? Войти</string>
    <string name="button_login">Войти</string>
    <string name="text_go_to_register">Нет аккаунта? Зарегистрироваться</string>
</resources>
